website/versioned_docs/version-2.7/guide_manual/admin-system.md
---
id: version-2.7-admin-system
title: System Management
original_id: admin-system
---
<div class="label-sect">
  <div class="ee-only tooltip">Enterprise
    <span class="tooltiptext">Applicable to Enterprise Edition</span>
  </div>
  <div class="ce-only tooltip">Community
    <span class="tooltiptext">Applicable to Community Edition</span>
  </div>
</div>

## PrimeHub License

![](assets/license_key_v24.png)

Information of the PrimeHub license:

+ `License Status`

+ `Expiration Date`

+ `Licensed To`

## System Settings

![](assets/system_1_v24.png)

+ `Name` your organization.

+ `Logo` Click `+ add Image` to upload the logo.

+ `Default User Volume Capacity` the default disk quota for user.

+ `Timezone` the system timezone.

## Email Settings

![](assets/system_2_v26.png)

+ `Smtp Host` Sends the Sever host location of the email.

+ `Smtp port` Sends the Sever host port of Email.

+ `From Display Name` A user-friendly name for the "From" address.

+ `From` The From field in Email.

+ `Reply To Display Name` A user-friendly name for the "Reply-To" address.

+ `Reply To` The Reply-To field in Email.

+ `Enable SSL` SSL encryption.

+ `Enable StartTLS` Supports extended StartTLS.

+ `Enable Authentication`
